--- a/flexbox.html
+++ b/flexbox.html
@@ -41,5 +41,17 @@
           </div>
         </div>
       </div>
+      <div class='footer'>
+        <div class='footer-item footer-one'></div>
+        <div class='footer-item footer-two'></div>
+        <div class='footer-item footer-three'></div>
+      </div>
+      <div class='menu-container'>
+        <div class='menu'>
+          <div class='date'>Aug 14, 2016</div>
+          <div class='signup'>Sign Up</div>
+          <div class='login'>Login</div>
+        </div>
+      </div>
   </body>
 </html>
